--- a/web/root/webrogue.html
+++ b/web/root/webrogue.html
@@ -138,7 +138,7 @@
 
   <script type='text/javascript'>
     var statusLabelElement = document.getElementById('statusLabel');
-    var consoleVisible = true;
+    var consoleVisible = false;
     var toggleConsoleButton = document.getElementById('toggleConsoleButton');
     toggleConsoleButton.style.visibility = "visible";
 
